--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
-  text-align: center;
+@import url('http://fonts.cdnfonts.com/css/lilly');
+.App{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+  padding-top: 50px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1{
+  font-family:  'Lilly', sans-serif;
+  font-size: 50px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.gen input{
+  height: 35px;
+  width: 250px;
+  font-size: 20px;
+  padding-left: 5px;
+}
+button{
+  position: relative;
+  height: 38px;
+  width: 100px;
+  top: -2px;
+  left: 1%;
+  font-size: 18px;
+border: none;
+color: whitesmoke;
+background-color: forestgreen;
+box-shadow: 2px 2px 5px rgb(74, 182, 74);
+cursor: pointer;
+padding-right: 10px;
+
+}
+button:active{
+  box-shadow: none;
+  
+}
+.extra{
+  padding-top: 20px;
+  display: flex;
+  justify-content: space-around;
+  gap: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.output-box{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  gap: 40px;
 }
